tests/ui/ast_term_from_function.stderr
error[E0505]: cannot move out of `args` because it is borrowed
  --> tests/ui/ast_term_from_function.rs:16:10
   |
9  |     let args = vec![term1, term2];
   |         ---- binding `args` declared here
10 |     let fun = ast::function(&loc, "name", &args, false).unwrap();
   |                                           ----- borrow of `args` occurs here
...
16 |     drop(args);
   |          ^^^^ move out of `args` occurs here
17 |     let _end = (term3, term4);
   |                 ----- borrow later used here
